Fix ValueCard animation on Firefox & animate text

--- a/frontend/src/styles/about_us/ValueCard.module.css
+++ b/frontend/src/styles/about_us/ValueCard.module.css
@@ -12,6 +12,11 @@
   gap: 5px;
 }
 
+.valueCardBg1,
+.valueCardBg2 {
+  display: none;
+}
+
 .valueCard.rev {
   background: linear-gradient(116.12deg, #cbf9f3 0%, #c2e0fb 100%);
 }
@@ -37,43 +42,65 @@
   .valueCard {
     width: 357px;
     height: 286px;
-    background-image: url(../../components/assets/ValueCardBackground1.svg);
-    background-size: cover;
-    transition: background-image 300ms ease-in;
-  }
-
-  .valueCard:hover {
-    background-image: url(../../components/assets/ValueCardBackgroundHover1.svg);
+    /* remove mobile background */
+    background: none;
   }
 
   .valueCard.rev {
-    background-image: url(../../components/assets/ValueCardBackground2.svg);
+    background: none;
   }
 
-  .valueCard.rev:hover {
-    background-image: url(../../components/assets/ValueCardBackgroundHover2.svg);
+  .valueCardBg1 {
+    display: inline;
+    position: absolute;
+    z-index: -1;
+    opacity: 1;
+    transition: opacity 300ms ease-in;
+  }
+
+  .valueCardBg2 {
+    display: inline;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 300ms ease-in;
   }
 
   .valueCardTextMain {
+    position: absolute;
     font-size: 34px;
     line-height: 39px;
     width: 181px;
     height: 80px;
     text-align: center;
-  }
 
-  .valueCard:hover .valueCardTextMain {
-    display: none;
+    opacity: 1;
+    transition: opacity 300ms ease-in;
   }
 
   .valueCardTextSub {
-    display: none;
+    position: absolute;
     width: 234px;
     height: 147px;
     text-align: left;
+
+    opacity: 0;
+    transition: opacity 300ms ease-in;
+  }
+
+  .valueCard:hover .valueCardBg1 {
+    opacity: 0;
+  }
+
+  .valueCard:hover .valueCardBg2 {
+    opacity: 1;
+  }
+
+  .valueCard:hover .valueCardTextMain {
+    opacity: 0;
   }
 
   .valueCard:hover .valueCardTextSub {
-    display: inline;
+    opacity: 1;
   }
 }
